# action-rpg-rust-wasm

./: .gitignore  Cargo.toml  index.html  web_build.bat
assets/: game_data.json  rtt.wgsl  rtt2.wgsl  shader_tile.wgsl
assets/character/: 02.json  03.json  04.json  05.json  06.json  06_1.json  character.json  howto.txt
assets/enemy/: ant.txt  minotaur.txt  zombie.json  zombie.txt
game/: main.rs
src/: application.rs  components.rs  cube.rs  game_state.rs  input_handler.rs  lib.rs  shader.wgsl  spawner.rs  utils.rs  vertex.rs
src/components/: animation.rs  attack.rs  attack_maker.rs  collision.rs  cube_instance.rs  enemy.rs  mesh.rs  mod.rs  physics.rs  player.rs  tile.rs  transform.rs
src/object/: make_cube.rs  mod.rs  tile.rs
src/renderer/: animation_data_handler.rs  camera.rs  component.rs  gpu_resource_manager.rs  mesh.rs  mod.rs  pipeline_manager.rs  render_texture.rs  renderer.rs  sprite.rs  sprite_animation.rs  texture.rs  vertex.rs
src/resources/: animation_data_handler.rs  camera.rs  center.rs  enemy_manager.rs  input_handler.rs  mod.rs  tile_map_storage.rs
src/system/: camera.rs  cube_shuffle.rs  fire_weapon.rs  mod.rs  render.rs  spawn_enemy.rs  update_animation.rs  update_attacks.rs  update_camera.rs  update_enemy.rs  update_meshes.rs  update_physics.rs  update_player.rs  update_tile_animation.rs
src/system/dispatcher/: mod.rs
