[package]
name = "vumi_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "vumi"
path = "game/main.rs"


[dependencies]
cfg-if = "1"
anyhow = "1.0"
winit = "0.28.3"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.3.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
instant = "0.1"
rand = "0.8.5"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "=0.2.84"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}
instant = { version = "0.1", features = [ "stdweb" ] }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"